--- a/pytorch/example.ipynb
+++ b/pytorch/example.ipynb
@@ -43,7 +43,7 @@
     "\n",
     "# Caminho para a imagem de exemplo.\n",
     "# Se esta imagem não existir, uma imagem de teste será criada.\n",
-    "IMAGE_PATH = \"/storage/standard/fingerprints/SD258/images/orig/000/01/sd258_000_11-01_template_bad.png\"\n",
+    "IMAGE_PATH = \"/storage/standard/fingerprints/SD258/images/orig/000/00/sd258_000_11-00_latent_bad.png\"\n",
     "\n",
     "# Exibe a imagem que será usada\n",
     "print(f\"Usando a imagem: {IMAGE_PATH}\")\n",
@@ -60,7 +60,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = fingernet.get_fingernet(weights_path=WEIGHTS_PATH)"
+    "device_type = \"cpu\"\n",
+    "device = torch.device(device_type)\n",
+    "model = fingernet.get_fingernet(WEIGHTS_PATH, device)"
    ]
   },
   {
@@ -70,8 +72,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
-    "\n",
     "# Carrega a imagem, converte para tons de cinza e normaliza para [0, 1]\n",
     "img_pil = Image.open(IMAGE_PATH).convert('L')\n",
     "img_np = np.array(img_pil, dtype=np.float32) / 255.0\n",
@@ -86,15 +86,38 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "477257e0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Set torch to number of machine cores\n",
+    "torch.set_num_threads(1)\n",
+    "print(\"Número de threads do PyTorch:\", torch.get_num_threads())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "36962fa0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "results = model(input_tensor)\n",
+    "results = model(input_tensor, log = True)\n",
     "\n",
     "# Vamos inspecionar as chaves do dicionário de resultados\n",
     "print(\"Chaves do dicionário de resultados:\", results.keys())\n",
     "print(\"\\nNúmero de minúcias detectadas:\", len(results['minutiae'][0]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "05d6911b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Free cuda memory\n",
+    "torch.cuda.empty_cache() if device_type == \"cuda\" else None"
    ]
   },
   {
